--- a/.github/workflows/build_site.yaml
+++ b/.github/workflows/build_site.yaml
@@ -2,16 +2,14 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
     push:
-      branches: [main, master]
+      branches: [main]
     pull_request:
-      branches: [main, master]
+      branches: [main]
 name: build_site
 permissions: read-all
 jobs:
     build_site:
-      runs-on: 
-        - macos-latest
-        - ubuntu-latest
+      runs-on: macos-latest
       permissions:
         contents: write
       env:
