chore: Add new chapters to the book

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,9 @@ book:
   repo-actions: [edit, issue]
   chapters:
     - index.qmd
-    - intro.qmd
+    - 010_rstudio_and_r.qmd
+    - 020_r_basics.qmd
+    - 030_r_functions.qmd
     - chatbots.qmd
     - data_structures_intro.qmd
     - dataframes_intro.qmd
