--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,9 @@ Depends: knitr, rmarkdown, pdftools, ggfortify, ggplot2,
     SummarizedExperiment, GenomicFeatures, AnnotationDbi, dplyr, 
     ggthemes, gridExtra, tidyr, readr, palmerpenguins, tidyverse, swirl,
     readxl, writexl, mlr3verse, mlr3learners, ranger, kknn, ComplexHeatmap,
-    glmnet, heatmaps, ggparty, mlr3viz, microbiome/mia, vegan, 
+    glmnet, heatmaps, ggparty, mlr3viz, mia, vegan, 
     TreeSummarizedExperiment
+Remotes: microbiome/mia
 License: Artistic-2.0
 URL: https://github.com/seandavi/2024-r-intro-bigcare
 biocViews: Software
