--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,15 +15,29 @@ book:
   repo-actions: [edit, issue]
   chapters:
     - index.qmd
-    - 010_rstudio_and_r.qmd
-    - 020_r_basics.qmd
-    - 030_r_functions.qmd
-    - 050_r_scripts.qmd
-    - chatbots.qmd
-    - data_structures_intro.qmd
-    - dataframes_intro.qmd
-    - ggplot.qmd
-    - 100_microbiome.qmd
+    - part: Getting started
+      chapters:
+        - 010_rstudio_and_r.qmd
+        - 020_r_basics.qmd
+        - 030_r_functions.qmd
+        - 050_r_scripts.qmd
+        - chatbots.qmd
+
+    - part: data_structures_overview.qmd
+      chapters:
+        - vectors.qmd
+        - matrices.qmd
+        - dataframes_intro.qmd
+
+    - part: Exploring data
+      chapters:
+        - 040_stats.qmd
+        - eda.qmd
+        - ggplot.qmd
+
+    - part: Applications
+      chapters:
+        - 310_microbiome.qmd
 
 format:
   html:
@@ -31,6 +45,7 @@ format:
     fig-cap-location: margin
     tbl-cap-location: margin
     code-copy: true
+    #code-fold: true
     theme:
       - flatly
       - style.scss
