--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Depends: knitr, rmarkdown, pdftools, ggfortify, ggplot2,
     ggthemes, gridExtra, tidyr, readr, palmerpenguins, tidyverse, swirl,
     readxl, writexl, mlr3verse, mlr3learners, ranger, kknn, ComplexHeatmap,
     glmnet, heatmaps, ggparty, mlr3viz, mia, vegan, 
-    TreeSummarizedExperiment, curatedMetagenomicData, magick
+    TreeSummarizedExperiment, curatedMetagenomicData, magick,
+    pheatmap, miaViz, scater
 Remotes: microbiome/mia
 License: Artistic-2.0
 URL: https://github.com/seandavi/2024-r-intro-bigcare
