--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Depends: knitr, rmarkdown, pdftools, ggfortify, ggplot2,
     readxl, writexl, mlr3verse, mlr3learners, ranger, kknn, ComplexHeatmap,
     glmnet, heatmaps, ggparty, mlr3viz, mia, vegan, 
     TreeSummarizedExperiment, curatedMetagenomicData, magick,
-    pheatmap, miaViz, scater
+    pheatmap, miaViz, scater, ggtree, pheatmap
 Remotes: microbiome/mia
 License: Artistic-2.0
 URL: https://github.com/seandavi/2024-r-intro-bigcare
