--- a/.github/workflows/build_site.yaml
+++ b/.github/workflows/build_site.yaml
@@ -35,8 +35,8 @@ jobs:
   
         - name: setup-quarto
           uses: quarto-dev/quarto-actions/setup@v2
-          #with:
-          #  tinytex: true
+          with:
+            tinytex: true
 #        - name: install quarto titlepages
 #          run: quarto install extension --no-prompt nmfs-opensci/quarto_titlepages
         - uses: quarto-dev/quarto-actions/publish@v2
